nodejs-welcome/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-welcome
  namespace: welcome
  labels:
    app: nodejs-welcome
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nodejs-welcome
  template:
    metadata:
      labels:
        app: nodejs-welcome
    spec:
      containers:
        - name: nodejs-welcome
          image: image-registry.openshift-image-registry.svc:5000/openshift/nodejs-webapp:latest
          ports:
            - containerPort: 8080
              protocol: TCP
